# introtodeeplearning

./: main.py  pyproject.toml
lab1/: PT_Part1_Intro.ipynb  PT_Part2_Music_Generation.ipynb
