[project]
name = "introtodeeplearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "comet-ml>=3.49.11",
    "datasets>=3.6.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "mitdeeplearning>=0.7.5",
    "opencv-python>=4.11.0.86",
    "scipy>=1.15.3",
    "torch>=2.7.1",
]
